another minor fix to compatibility spacing

--- a/styles/sass/partials/_media-queries.scss
+++ b/styles/sass/partials/_media-queries.scss
@@ -103,7 +103,7 @@
 		margin: 30px auto;
 		padding: 0;
 		position: relative;
-		left: 2px;
+		left: 5px;
 		li {
 			width: 40px;
 			margin: 12px;
