--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1390,7 +1390,7 @@ ul {
     margin: 30px auto;
     padding: 0;
     position: relative;
-    left: 2px;
+    left: 5px;
   }
   .toolkit-icon-container li {
     width: 40px;
